#
# Copyright 2024. Clumio, Inc.
#
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
# https://github.com/jazzband/pip-tools#requirements-from-pyprojecttoml
#
# This project is not intended to be 'installed', this config file is purely
# to help configure the development tools.

[project]
name = 'clumio-bulk_restore'
description = 'Bulk Restore for Clumio, a Commvault Company'
readme = 'README.md'
authors = [ {name = 'Clumio, a Commvault Company'} ]
dynamic = ['dependencies', 'optional-dependencies']
requires-python = '>=3.12'


[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}
optional-dependencies.dev = { file = ['requirements-dev.txt'] }


[tool.coverage.run]
branch = true
source = ['code']


[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.ipynb_checkpoints',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pyenv',
    '.pytest_cache',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '.vscode',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'site-packages',
    'venv',
    'vendor',
    # Temporarily ignore the sdk file due to hundreds of reported issues.
    'clumio_sdk*.py'
]
target-version = 'py312'
indent-width = 4
line-length = 100

[tool.ruff.format]
# Unlike Black, use single quotes for strings.
quote-style = 'single'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'


[tool.ruff.lint]
select = ['D', 'I', 'PL', 'S', 'W', 'UP']

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = [
    'D101',  # undocumented-public-class, covered by pylint for now.
    'D102',  # undocumented-public-method, covered by pylint for now.
    'D104',  # undocumented-public-package, would require empty __init__.py to have docstrings.
    'D107',  # undocumented-public-init, covered by pylint for now.
    'D410',  # no-blank-line-after-section, would need a lot of docstrings changes.
    'D411',  # no-blank-line-before-section, would need a lot of docstrings changes.
]


[tool.ruff.lint.pydocstyle]
convention = 'google'


[tool.ruff.lint.isort]
lines-after-imports = -1

[tool.uv.pip]
system = true
prerelease = 'allow'
